<resources>
    <string name="app_name">Agera</string>
    <string name="count">Count</string>
    <string name="delete">Delete</string>
    <string name="increment_bt">Increment</string>
    <string name="add">Add</string>
    <string name="subtract">Sub</string>
    <string name="multiply">Mult</string>
    <string name="divide">Div</string>
    <string name="not_available">N/A</string>
    <string name="div_zero">DIV#0</string>
</resources>
